Add ARIA label for delete button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<button class="key key-light" value="7">7</button>
 			<button class="key key-light" value="8">8</button>
 			<button class="key key-light" value="9">9</button>
-			<button class="key key-delete" value="delete">Del</button>
+			<button class="key key-delete" value="delete" aria-label="Delete">Del</button>
 			<button class="key key-light" value="4">4</button>
 			<button class="key key-light" value="5">5</button>
 			<button class="key key-light" value="6">6</button>
