Use regular labels since 'aria-labeledby' works ok

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				<legend class="sr-only">Choose a theme</legend>
 
 				<div class="toggle-switch-labels">
-					<p id="toggle-switch-label1" class="toggle-switch-label">1</p>
-					<p id="toggle-switch-label2" class="toggle-switch-label">2</p>
-					<p id="toggle-switch-label3" class="toggle-switch-label">3</p>
+					<label id="toggle-switch-label1" class="toggle-switch-label">1</label>
+					<label id="toggle-switch-label2" class="toggle-switch-label">2</label>
+					<label id="toggle-switch-label3" class="toggle-switch-label">3</label>
 				</div>
 				<div class="toggle-switch-radios">
 					<input type="radio" name="theme" id="toggle-switch-radio1" class="toggle-switch-radio" value="theme1" aria-labelledby="toggle-switch-label1" checked>
