Use the appropriate 'for' attribute instead on labels and scratch previous approach

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 				<legend class="sr-only">Choose a theme</legend>
 
 				<div class="toggle-switch-labels">
-					<label id="toggle-switch-label1" class="toggle-switch-label">1</label>
-					<label id="toggle-switch-label2" class="toggle-switch-label">2</label>
-					<label id="toggle-switch-label3" class="toggle-switch-label">3</label>
+					<label id="toggle-switch-label1" class="toggle-switch-label" for="toggle-switch-radio1">1</label>
+					<label id="toggle-switch-label2" class="toggle-switch-label" for="toggle-switch-radio2">2</label>
+					<label id="toggle-switch-label3" class="toggle-switch-label" for="toggle-switch-radio3">3</label>
 				</div>
 				<div class="toggle-switch-radios">
-					<input type="radio" name="theme" id="toggle-switch-radio1" class="toggle-switch-radio" value="theme1" aria-labelledby="toggle-switch-label1" checked>
-					<input type="radio" name="theme" id="toggle-switch-radio2" class="toggle-switch-radio" value="theme2" aria-labelledby="toggle-switch-label2">
-					<input type="radio" name="theme" id="toggle-switch-radio3" class="toggle-switch-radio" value="theme3" aria-labelledby="toggle-switch-label3">
+					<input type="radio" name="theme" id="toggle-switch-radio1" class="toggle-switch-radio" value="theme1" checked>
+					<input type="radio" name="theme" id="toggle-switch-radio2" class="toggle-switch-radio" value="theme2">
+					<input type="radio" name="theme" id="toggle-switch-radio3" class="toggle-switch-radio" value="theme3">
 				</div>
 				<div class="toggle-switch-button"></div>
 			</fieldset>
